# transfer-service

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 001_initial_schema.py  002_add_transfer_driver_fields.py
app/: config.py  database.py  domain.py  enums.py  error_handlers.py  exceptions.py  main.py  middleware.py  models.py  routes.py  schemas.py
app/routers/: transfers.py  vehicles.py
app/services/: notification_service.py  transfer_service.py  vehicle_service.py
app/templates/: index.html
tests/: conftest.py
tests/integration/: test_api.py
tests/unit/: test_domain.py  test_services.py
